crates/cribo/tests/snapshots/ruff_lint_results@xfail_module_setattr_with_circular_deps.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_setattr_with_circular_deps/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
