crates/cribo/tests/snapshots/ruff_lint_results@xfail_no_ops_multimodule_self_refs.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_no_ops_multimodule_self_refs/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 5: unused-import - `os.path` imported but unused",
    ],
    total_violations: 1,
}
